# self_balancing_robot

./: .gitignore  Readme.md
electronics/cable_harnesses/: .gitignore  README.md  cable_harness_imu_to_esp32.yml  cable_harness_motor_controller.yml  cable_harness_motor_encoders_to_esp32.yml  cable_harness_powerbank_to_esp32.yml
electronics/code/arduino_sketches/sketch_blink/: platform.local.txt  sketch_blink.ino
electronics/code/arduino_sketches/sketch_hpwm/sketch_hpwm/: sketch_hpwm.ino
electronics/code/arduino_sketches/sketch_mpu6050/sketch_mpu6050/: sketch_mpu6050.ino
electronics/code/platformio_projects/self_balancing_robot/: README.md  platformio.ini
electronics/code/platformio_projects/self_balancing_robot/src/: data_structs.h  main.cpp  pid.cpp  pid.h  read_serial.cpp  secrets_template.h
electronics/code/python/: README.md  balancing_robot_lagrangian_calc.py  plot_serial.py  pyproject.toml
electronics/code/webserver/: gui.py
electronics/robot_pcb/: MCU_Espressif_ESP32.kicad_sym  robot_pcb.kicad_pcb  robot_pcb.kicad_pro  robot_pcb.kicad_sch
mechanical/: Readme.md
